@@ -881,9 +881,10 @@ class Operations(llfuse.Operations):
         fs_size = self.db.get_val('SELECT SUM(size) FROM inodes') or 0
         dedup_size = self.db.get_val('SELECT SUM(size) FROM blocks') or 0
         compr_size = self.db.get_val('SELECT SUM(size) FROM objects') or 0
-
-        return struct.pack('QQQQQQQ', entries, blocks, inodes, fs_size, dedup_size,
-                           compr_size, self.db.get_size())
+        (cache_used, cache_dirty) = self.cache.get_usage()
+        
+        return struct.pack('QQQQQQQQQ', entries, blocks, inodes, fs_size, dedup_size,
+                           compr_size, self.db.get_size(), cache_used, cache_dirty)
 
 
     def statfs(self):
